add multiple language

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/car_menu"
-        android:title="car"
+        android:title="@string/shop"
         android:icon="@drawable/ic_car"/>
     <item
-        android:id="@+id/favourite_menu"
-        android:title="favourite"
-        android:icon="@drawable/ic_list"/>
+        android:id="@+id/setting_menu"
+        android:title="@string/setting"
+        android:icon="@drawable/ic_setting"/>
 </menu>
