--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
-<resources>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- v21 styles, you can merge these two if your minSdkVersion is >= 21, -->
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -21,6 +21,30 @@
         <item name="android:background">@color/colorWhite</item>
         <item name="background">@color/colorWhite</item>
 
+    </style>
+    
+    <style name="BottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@android:color/transparent</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/colorWhite</item>
+    </style>
+
+
+    <style name="TitileNameShopCard">
+        <item name="android:textSize">20dp</item>
+        <item name="android:fontFamily">@font/quicksand_bold</item>
+        <item name="android:textColor">@color/colorDarkGray</item>
+    </style>
+
+    <style name="DescriptionShopCard">
+        <item name="android:textSize">16dp</item>
+        <item name="android:fontFamily">@font/quicksand_medium</item>
+        <item name="android:textColor">@color/colorGray</item>
+    </style>
+
+    <style name="StatusShopCard">
+        <item name="android:textSize">16dp</item>
+        <item name="android:fontFamily">@font/quicksand_medium</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
 
