--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
@@ -19,7 +18,8 @@
                 android:layout_height="wrap_content">
 
             <TextView
-                    android:text="Name shop"
+                    style="@style/TitileNameShopCard"
+                    android:text="@string/name_shop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/name_label"
@@ -42,7 +42,8 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"/>
             <TextView
-                    android:text="Type shop"
+                    style="@style/TitileNameShopCard"
+                    android:text="@string/type_shop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/type_label"
@@ -60,7 +61,8 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <TextView
-                    android:text="Category shop"
+                    style="@style/TitileNameShopCard"
+                    android:text="@string/categoty_shop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/category_label"
@@ -76,7 +78,8 @@
                     android:layout_height="wrap_content">
             </androidx.recyclerview.widget.RecyclerView>
             <TextView
-                    android:text="Address"
+                    style="@style/TitileNameShopCard"
+                    android:text="@string/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/address_label"
@@ -101,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/button_add_shop"
                     android:textColor="@color/colorWhite"
-                    android:text="ADD SHop"/>
+                    android:text="@string/add_shop"/>
         </LinearLayout>
 
     </ScrollView>
