--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:background="@color/colorWhite"
              android:layout_width="match_parent" android:layout_height="match_parent"
              tools:context=".fragment.SettingFragment">
 
@@ -14,7 +15,7 @@
                 android:id="@+id/favourite_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Your favourite shop"
+                android:text="@string/your_fav_shop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -34,55 +35,88 @@
         </androidx.recyclerview.widget.RecyclerView>
         <TextView
                 style="@style/TitileNameShopCard"
-                android:text="Setting"
+                android:text="@string/setting"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/setting_label" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                android:id="@+id/setting_label"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/favouriteRecyclerView"/>
         <LinearLayout
-                android:id="@+id/settingLanguage"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/setting_label" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/settingAddShop">
-            <TextView
-                    android:text="Language"
-                    android:padding="5dp"
-                    android:layout_weight="1"
-                    style="@style/DescriptionShopCard"
+                android:layout_marginEnd="8dp">
+
+
+            <LinearLayout
+                    android:id="@+id/settingAddShop"
+                    android:padding="8dp"
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            <TextView
-                    android:id="@+id/language"
-                    android:text="TH"
-                    android:padding="5dp"
-                    android:layout_weight="1"
-                    android:textAlignment="textEnd"
-                    style="@style/DescriptionShopCard"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:text="@string/add_my_shop"
+                        android:padding="5dp"
+                        style="@style/DescriptionShopCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <View
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-                android:id="@+id/settingAddShop"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/setting_label">
-            <TextView
-                    android:text="Add shop"
-                    android:padding="5dp"
-                    android:layout_weight="1"
-                    style="@style/DescriptionShopCard"
+                    android:layout_height="1dp"
+                    android:background="@color/colorLightGray"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"/>
+            <LinearLayout
+                    android:id="@+id/settingFilter"
+                    android:padding="8dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:text="@string/search_filter"
+                        android:padding="5dp"
+                        style="@style/DescriptionShopCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorLightGray"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"/>
+
+            <LinearLayout
+                    android:id="@+id/settingLanguage"
+                    android:padding="8dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:text="@string/language"
+                        android:padding="5dp"
+                        android:layout_weight="1"
+                        style="@style/DescriptionShopCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:id="@+id/language"
+                        android:padding="5dp"
+                        android:layout_weight="1"
+                        android:textAlignment="textEnd"
+                        style="@style/DescriptionShopCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
