add detail shop activity

--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -1,112 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorWhite"
-        tools:context=".activity.AddShopActivity">
-    <ScrollView
-            android:id="@+id/scrollView"
+        android:layout_height="match_parent">
+    <LinearLayout
+            android:id="@+id/linearLayout"
+            android:orientation="vertical"
+            android:background="@color/colorWhite"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-                android:id="@+id/linearLayout"
-                android:orientation="vertical"
-                android:background="@color/colorWhite"
+            android:layout_height="wrap_content">
+
+        <TextView
+                style="@style/TitileNameShopCard"
+                android:text="@string/name_shop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/name_label"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"/>
+        <EditText
+                android:id="@+id/nameshop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:paddingStart="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:ems="10"
+                android:background="@drawable/edit_text_rounded"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
+        <TextView
+                style="@style/TitileNameShopCard"
+                android:text="@string/type_shop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/type_label"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/typeRecyclerView"
+                android:layout_margin="8dp"
+                android:overScrollMode="never"
+                tools:listitem="@layout/type_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
 
-            <TextView
-                    style="@style/TitileNameShopCard"
-                    android:text="@string/name_shop"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/name_label"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"/>
-            <EditText
-                    android:id="@+id/nameshop"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:paddingStart="16dp"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
-                    android:ems="10"
-                    android:background="@drawable/edit_text_rounded"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"/>
-            <TextView
-                    style="@style/TitileNameShopCard"
-                    android:text="@string/type_shop"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/type_label"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"/>
+        <TextView
+                style="@style/TitileNameShopCard"
+                android:text="@string/categoty_shop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/category_label"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_margin="8dp"
+                tools:listitem="@layout/category_item"
+                android:overScrollMode="never"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+                style="@style/TitileNameShopCard"
+                android:text="@string/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/address_label"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"/>
+        <TextView
+                style="@style/DescriptionSmall"
+                android:text="@string/address_detail"
+                android:layout_margin="8dp"
+                android:id="@+id/addressDesscription"
+                android:maxLines="2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        <fragment
+                android:id="@+id/map"
+                android:layout_margin="8dp"
+                android:name="com.example.hokkung.cardemo.utils.TouchMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="250dp">
+        </fragment>
+        <Button
+                android:id="@+id/saveCarShop"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_add_shop"
+                android:textColor="@color/colorWhite"
+                android:text="@string/add_shop"/>
+    </LinearLayout>
+</ScrollView>
 
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/typeRecyclerView"
-                    android:layout_margin="8dp"
-                    android:overScrollMode="never"
-                    tools:listitem="@layout/type_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-            </androidx.recyclerview.widget.RecyclerView>
-
-            <TextView
-                    style="@style/TitileNameShopCard"
-                    android:text="@string/categoty_shop"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/category_label"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_margin="8dp"
-                    tools:listitem="@layout/category_item"
-                    android:overScrollMode="never"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-            </androidx.recyclerview.widget.RecyclerView>
-            <TextView
-                    style="@style/TitileNameShopCard"
-                    android:text="@string/address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/address_label"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"/>
-            <fragment
-                    android:id="@+id/map"
-                    android:layout_margin="8dp"
-                    android:name="com.example.hokkung.cardemo.utils.TouchMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp">
-            </fragment>
-
-            <Button
-                    android:id="@+id/saveCarShop"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_add_shop"
-                    android:textColor="@color/colorWhite"
-                    android:text="@string/add_shop"/>
-        </LinearLayout>
-
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
